force-app/main/default/objects/animalos__Payment__c/animalos__Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>