force-app/main/default/objects/animalos__Payment__c/fields/animalos__Amount__c.field-meta.xml
<CustomField>
    <fullName>animalos__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>