force-app/main/default/objects/animalos__Payment__c/fields/animalos__Invoice__c.field-meta.xml
<CustomField>
    <fullName>animalos__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>animalos__Invoice__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>