force-app/main/default/objects/animalos__Payment__c/fields/animalos__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>