force-app/main/default/objects/animalos__Payment__c/fields/animalos__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>animalos__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Centre Pay</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>