force-app/main/default/objects/animalos__Payment__c/fields/animalos__Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>animalos__Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>