force-app/main/default/objects/animalos__Payment__c/fields/animalos__Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>